k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pravesh-ui-service
  namespace: doha-ecom
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
    cloud.google.com/load-balancer-type: "Internal"
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: pravesh-ui
